feat: add presentation of computer architecture

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Computer Architecture</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -16,8 +16,26 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section><p>Computer Architecture</p></section>
+				<section>What Is Computer Architecture?</section>
+				<section>What are the main components of computer architecture?
+					<section></section>
+					<section><img src="./examples/assets/components.png" alt="components"></section>
+				</section>
+				<section>1. Input unit and associated peripherals</section>
+				<section>2. Output unit and associated peripherals</section>
+				<section>3. Storage unit/memory
+					<section></section>
+					<section>Primary storage unit: RAM, ROM</section>
+					<section>Secondary storage unit: HDD, SSD</section>
+				</section>
+				<section>4. Central processing unit (CPU)</section>
+				<section>5. Operating system (OS)</section>
+				<section>Types of Computer Architecture
+					<section></section>
+					<section><img src="./examples/assets/types.png" alt="types"></section>
+				</section>
+				<section>Thank you for your attention</section>
 			</div>
 		</div>
 
